--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,18 @@
         <meta http-equiv="Cache-Control" content="no-cache">
         <meta http-equiv="x-dns-prefetch-control" content="on">
         <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-        <title>慧点科技-数智风控</title>
+        <title>慧点科技-大数据风控管理_风控管理解决方案_风控中台_专项风险管理_四位一体_关联交易风险</title>
+        <meta name="KeyWords" content="风控管理,风险管控,大数据风控,内控管理,合规管理,四位一体,风险管理">
+        <meta name="description" content="风控管理,风险管控,大数据风控,内控管理,合规管理,四位一体,风险管理,重新定义数智时代的风控管理。">
+        <script>
+            var _hmt = _hmt || [];
+            (function() {
+              var hm = document.createElement("script");
+              hm.src = "https://hm.baidu.com/hm.js?bc8451bd9385622d1f9c6abfbdefca88";
+              var s = document.getElementsByTagName("script")[0]; 
+              s.parentNode.insertBefore(hm, s);
+            })();
+            </script>
     </head>
     <body>
         <div id="app"></div>
